[package]
name = "fetch-github"
version = "0.1.0"
authors = ["Cody Lund <codylund14@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.20"
wasm-bindgen = { version = "0.2.28", features = ["serde-serialize"]  }
js-sys = "0.3.5"
wasm-bindgen-futures = "0.3.5"
serde = "1.0.80"
serde_derive = "1.0.80"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
